:bug: Remove wrap height:100%, flex stretch works with auto height

--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -161,7 +161,6 @@ spline-viewer {
 
 .today>.wrap {
     display: flex;
-    height: 100%;
 }
 
 /* today 왼쪽 박스 버튼x */
@@ -308,7 +307,6 @@ li a:hover {
 
 .community>.wrap {
     display: flex;
-    height: 100%;
 }
 
 .community>.wrap>div {
